--- a/index.html
+++ b/index.html
@@ -3244,7 +3244,7 @@ window.application = new Application();
 		<img id="ID7507" src="ID7507.png" srcset="ID7507.png 1x, ID7507@2x.png 2x">
 			
 	</div>
-	<img id="follow-us-on-instagram-vector-" src="follow-us-on-instagram-vector-.png" srcset="follow-us-on-instagram-vector-.png 1x, follow-us-on-instagram-vector-@2x.png 2x">
+	<a href="https://www.instagram.com/chillspotny/"><img id="follow-us-on-instagram-vector-" src="follow-us-on-instagram-vector-.png" srcset="follow-us-on-instagram-vector-.png 1x, follow-us-on-instagram-vector-@2x.png 2x"></a>
 		
 </div>
 </body>
