--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		font-size: 120px;
 		color: rgba(216,42,71,1);
 		letter-spacing: 0.016100000143051147px;
+		text-align: center;
 	}
 	#Opening_Soon {
 		left: 192px;
@@ -3185,7 +3186,7 @@ window.application = new Application();
 		
 	<div id="Group_61">
 		<div id="Chill_Spot">
-			<span>Chill Spot</span>
+		<img src="chillspotny.png" alt="Chill Spot NY"/>
 		</div>
 		<div id="Opening_Soon">
 			<span>Opening Soon</span>
